--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --config mocharc.json",
     "format": "prettier --write --config .prettierrc **/*.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.8.4",
+    "@types/node": "^18.11.16",
     "prettier": "^2.7.1",
     "readline-sync": "^1.4.10"
   },
   "dependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/jest": "^29.2.4",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
+    "jest": "^29.3.1",
+    "mocha": "^10.2.0",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1"
   }
 }
