--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@types/chai": "^4.3.4",
     "@types/jest": "^29.2.4",
     "@types/mocha": "^10.0.1",
+    "@types/superagent": "^4.1.16",
     "chai": "^4.3.7",
     "jest": "^29.3.1",
     "mocha": "^10.2.0",
+    "superagent": "^8.0.6",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1"
-  }
+  },
+  "type":"commonjs"
 }
