--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.11.16",
+    "@types/node": "^18.11.18",
     "prettier": "^2.7.1",
     "readline-sync": "^1.4.10"
   },
   "dependencies": {
     "@types/chai": "^4.3.4",
+    "@types/chromedriver": "^81.0.1",
     "@types/jest": "^29.2.4",
     "@types/mocha": "^10.0.1",
+    "@types/selenium-webdriver": "^4.1.10",
     "@types/superagent": "^4.1.16",
     "chai": "^4.3.7",
+    "chromedriver": "^108.0.0",
     "jest": "^29.3.1",
     "mocha": "^10.2.0",
+    "selenium-webdriver": "^4.7.1",
     "superagent": "^8.0.6",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1"
   },
-  "type":"commonjs"
+  "type": "commonjs"
 }
