--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "types": ["node","chai","jest"],
         "esModuleInterop": true,
-        "lib": ["ES2021.String"]
+        "lib": ["ES2021.String"],
+        "target": "ES5",
     }
 }
